Raghumark/src/objects/Demo_Object__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Customer - Channel</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Demo Objects</relationshipLabel>
        <relationshipName>Demo_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_Close_Date__c</fullName>
        <label>App Close Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_Start_Date__c</fullName>
        <label>App Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Demo Objects</relationshipLabel>
        <relationshipName>Demo_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Controlling_Picklist__c</fullName>
        <label>Controlling Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>345</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>567</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demo_Picklist__c</fullName>
        <label>Demo Picklist</label>
        <picklist>
            <controllingField>Controlling_Picklist__c</controllingField>
            <picklistValues>
                <fullName>ABC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PQR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XYZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formula_1__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_End_Date__c</fullName>
        <label>Review End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Start_Date__c</fullName>
        <label>Review Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Text__c</fullName>
        <description>This field holds the value for Demo Order Details</description>
        <inlineHelpText>This field holds the value for Demo Order Details and is of 50 char long.</inlineHelpText>
        <label>Test Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Demo Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Demo Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Objects</pluralLabel>
    <recordTypes>
        <fullName>Recrod_Type_2</fullName>
        <active>true</active>
        <label>Recrod Type 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test_Record_Type</fullName>
        <active>true</active>
        <label>Test Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>